2005-10-16  Andy Sloane <andy@guildsoftware.com>  (tiny change)

	* tramp.el (tramp-enter-password): `tramp-password-end-of-line'
	must be taken from `tramp-current-hop-*'.

2005-10-13  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.4 released.

	* tramp.el (tramp-debug-message, tramp-message-for-buffer): Write
	message only if connection buffer exists.  Otherwise, `method',
	`user' and `host' are not set yet.
	(tramp-handle-directory-files-and-attributes-with-perl)
	(tramp-handle-directory-files-and-attributes-with-stat): New
	defuns.
	(tramp-handle-directory-files-and-attributes): Use them.

2005-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Try to simplify XEmacs byte-compiler
	pacification.
	(tramp-verbose): Finish doc string.  New default value is 3.
	(all): Apply new verbosity levels.
	(tramp-get-debug-buffer): Remove definition of outline faces.  The
	default values are good enough.
	(tramp-bug): Explain setting of `tramp-verbose'.

	* tramp-cache.el (all): Apply new verbosity levels.

	* tramp-smb.el (top): Try to simplify XEmacs byte-compiler
	pacification.
	(all): Apply new verbosity levels.

	* tramp-vc.el (top): Try to simplify XEmacs byte-compiler
	pacification.

2005-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-verbose): Start rewriting the doc string.  Not
	finished yet.
	(tramp-handle-delete-file, tramp-handle-insert-file-contents)
	(tramp-sh-file-name-handler): Signals expect a list as last
	parameter.
	(tramp-file-name-handler): Handle signals in order to trace them
	in the debug buffer.

	* tramp-smb.el (tramp-smb-handle-directory-files): Rewritten in
	order to profit from caching results.
	(tramp-smb-handle-file-name-all-completions): `localname' must be
	expanded by `file-name-as-directory'.

2005-10-11  Steve Youngs  <steve@sxemacs.org>

	* tramp.el: Require `timer-funcs' instead of `timer' if in
	XEmacs.

2005-10-10  Michael Albinus  <michael.albinus@gmx.de>
