@@ -1,3 +1,10 @@
+2005-10-08  Lars Hansen  <larsh@soem.dk>
+
+	* tramp.el (tramp-perl-directory-files-and-attributes): Add error
+	handling.
+	(tramp-handle-directory-files-and-attributes-with-perl): Handle
+	perl error msg.
+
 2005-10-16  Andy Sloane <andy@guildsoftware.com>  (tiny change)
 
 	* tramp.el (tramp-enter-password): `tramp-password-end-of-line'
